--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@mui/material": "^5.5.3",
     "@nextui-org/react": "^1.0.5-beta.5",
     "axios": "^0.26.1",
+    "js-cookie": "^3.0.1",
+    "moment": "^2.29.3",
     "next": "12.1.1",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.2",
     "@types/node": "17.0.23",
     "@types/react": "17.0.43",
     "@types/react-dom": "17.0.14",
